Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106566

qmllint crashes on invalid alias property

    XMLWordPrintable

Details

    • db0913a323 (qt/qtdeclarative/dev) db0913a323 (qt/tqtc-qtdeclarative/dev) c8e5727c06 (qt/qtdeclarative/6.4) c8e5727c06 (qt/tqtc-qtdeclarative/6.4)

    Description

      The following QML is invalid, but instead of generating a warning, qmllint crashes:

       

      import QtQuick
      Item {
          Item {
              QtObject { id: inner }
              property alias innerinner
              property string name: innerO
              property alias innerObj: inner
              property string name: innebj.objectName
          }
      }
      

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes