qmllint: Gracefully handle and warn about invalid alias properties

qmllint used to crash when an alias did not have a proper target (e.g.
missing target, or statement of the wrong kind). Detect that kind of
error, and print a proper error message.

Fixes: QTBUG-106566
Change-Id: Id4edb37953762267bae0a3952b9c75e72ec0c47b
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit db0913a323c28c93c362a9b128f62d00bb83355f)
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>