tests/auto/qml/qmllint/data/invalidAliasTarget.qml
@@ -1,0 +1,11 @@
+import QtQuick
+
+Item {
+    Item {
+
+        property alias innerinner
+        property alias name: function f() {}
+
+        property alias innerObj: 1+1
+    }
+}
